[package]
name = "dys"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

[features]
default = ["dock"]
dock = []

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
gtk = { version = "0.18.2" }
gdk = "0.18.0"
gio = "0.18.4"
glib = "0.18.5"

gio-sys = "0.18.1"

