[package]
name = "dys"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

[features]
default = ["dock"]
dock = []

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
adw = { package = "libadwaita", features = ["v1_8"], version = "0.8.0" }
gtk = { package = "gtk4", features = ["v4_10"], version = "0.10.2" }
gdk = { package = "gdk4", features = ["v4_10"], version = "0.10.1" }
gio = "0.21.4"
glib = "0.21.4"

gio-sys = "0.21.2"

